fixed spacing above about section

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ main {
 }
 
 #about {
-    margin-top: 200px;
+    margin-top: 100vh;
 }
 .section h2 {
     font-size: 64px;
@@ -76,7 +76,8 @@ main {
     margin: 0 150px;
 }
 #contact {
-    margin-bottom: 250px;
+    margin-bottom: 200px;
+
 }
 #contact i {
     margin-right: 10px;
